syntax = "proto3";
option go_package = "/vaultcredpb";

package vaultcredpb;

service VaultCred {
  // single RPC for all credential types like user/password, certificates etc.
  // vault secret path  prepated based on <credentialType>/<credEntityName>/<credIdentifier>
  // for example, client-certs path will be certs/client/clientA
  // for example, cassandra root user path will be service-cred/cassandra/root
  // pass authentication token with service account token to authenticate & authorize the request with vault
  rpc GetCred (GetCredRequest) returns (GetCredResponse) {};
  rpc PutCred (PutCredRequest) returns (PutCredResponse) {};
  rpc DeleteCred (DeleteCredRequest) returns (DeleteCredResponse) {};
}

message GetCredRequest {
   string serviceAccountToken = 1;
   string vaultRole = 2;
   string credentialType = 3;
   string credEntityName = 4;
   string credIdentifier = 5;   
}

message GetCredResponse {
   //service-cred credential, for example: "userName": "iam-root", "password:: "hello"
   //client-cert credential, for example: "clientId": "intelops-user", "ca.crt": "...", "client.crt": "...", "client.key": "..."
   map<string, string> credentail = 1;
}

message PutCredRequest {
   string serviceAccountToken = 1;
   string vaultRole = 2;
   string credentialType = 3;
   string credEntityName = 4;
   string credIdentifier = 5;
   //service-cred credential, for example: "userName": "iam-root", "password:: "hello"
   //client-cert credential, for example: "clientId": "intelops-user", "ca.crt": "...", "client.crt": "...", "client.key": "..."
   map<string, string> credentail = 6;
}

message PutCredResponse {
}

message DeleteCredRequest {
   string serviceAccountToken = 1;
   string vaultRole = 2;
   string credentialType = 3;
   string credEntityName = 4;
   string credIdentifier = 5;   
}

message DeleteCredResponse {
}
